--- a/index.html
+++ b/index.html
@@ -1,18 +1,113 @@
+<!DOCTYPE HTML>
 <html>
 	<head>
 	
-		<link rel = "stylesheet" type = "text/css" href = "css/background.css"/>
+		<meta charset = "UTF-8"/>
+		<link rel = "stylesheet" type = "text/css" href = "css/principalSheet.css"/>
+		<link rel = "stylesheet" type = "text/css" href = "css/mainPage/section.css"/>
+		<link rel = "stylesheet" type = "text/css" href = "css/mainPage/background.css"/>
+		<link rel = "stylesheet" type = "text/css" href = "css/mainPage/title-stripe.css"/>
 	
 		<script src = "jquery/jquery-3.2.1.min.js"></script>
-		<script src = "script/backgroundAnimation.js"></script>
+		<script src = "script/animationController.js"></script>
+		<script src = "script/title-stripe-animation.js"></script>
+		<script src = "script/icons-animation.js"></script>
+		
+		<link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i|Open+Sans+Condensed:300,300i,700|Ubuntu:300,300i,400,400i,500,500i,700,700i&amp;subset=latin-ext" rel="stylesheet">
 	
 	</head>
 	<body>
-	
-		<div class = "background" id = "section1"></div>
-		<div class = "content"> AAAA </div>
-		<div class = "background" id = "section2"></div>
-		<div class = "content"> AAAA </div>
+		<div class = "viewport">
+			<!-- title -->
+			
+			<div class = "section" id = "section0">
+				<div class = "section_background" id = "section0-background">
+					
+				</div>
+			</div>
+			
+			<!-- section1 - about -->
+			
+			<div class = "section" id = "section1">
+				<div class = "section_background" id = "section1-background">
+					<div class = "section_stripe" id = "section_stripe1">
+						<div class = "section_sectionTitle" id = "section_sectionTitle1">O Nas</div>
+						<div class = "section_icons_wrapper">
+							<!-- statut -->
+							<div class = "section-icons_wrapper-element" id = "section-icons_wrapper-element1">
+								<div class = "icon_text">Statut</div>
+								<div class = "more_description">Jakie są nasze zasady i jak działamy</div>
+								<div class = "more_text">Więcej</div>
+								<div class = "more_arrow"></div>
+							</div>
+							<!-- history -->
+							<div class = "section-icons_wrapper-element" id = "section-icons_wrapper-element2">
+								<div class = "icon_text">Historia</div>
+								<div class = "more_description">Jak wygląda nasza przeszłość</div>
+								<div class = "more_text">Więcej</div>
+								<div class = "more_arrow"></div>
+							</div>
+							<!-- for parents -->
+							<div class = "section-icons_wrapper-element" id = "section-icons_wrapper-element3">
+								<div class = "icon_text">Dla</br> Rodziców</div>
+								<div class = "more_description">Wszelkie informacje dla opiekunów najmłodszych kandydatów</div>
+								<div class = "more_text">Więcej</div>
+								<div class = "more_arrow"></div>
+							</div>
+							<!-- about group -->
+							<div class = "section-icons_wrapper-element" id = "section-icons_wrapper-element4">
+								<div class = "icon_text">O</br>Związku</div>
+								<div class = "more_description">Dowiedz się czym jest organizacja do której należymy</div>
+								<div class = "more_text">Więcej</div>
+								<div class = "more_arrow"></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			<!-- section2 - recrutation -->
+			
+			<div class = "section" id = "section2">
+				<div class = "section_background" id = "section2-background">
+					<div class = "section_stripe" id = "section_stripe2">
+						<div class = "section_sectionTitle" id = "section_sectionTitle2">Rekrutacja</div>
+						<div class = "section_icons_wrapper">
+							<!-- statut -->
+							<div class = "section-icons_wrapper-element"></div>
+							<!-- history -->
+							<div class = "setion-icons_wrapper-element"></div>
+							<!-- for parents -->
+							<div class = "section-icons_wrapper-element"></div>
+							<!-- about group -->
+							<div class = "section-icons_wrapper-element"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			<!-- section3 - gallery -->
+			
+			<div class = "section" id = "section3">
+				<div class = "section_background" id = "section3-background">
+					<div class = "section_stripe" id = "section_stripe3">
+						<div class = "section_sectionTitle" id = "section_sectionTitle3">Galeria</div>
+						<div class = "section_icons_wrapper">
+							<!-- statut -->
+							<div class = "section-icons_wrapper-element"></div>
+							<!-- history -->
+							<div class = "setion-icons_wrapper-element"></div>
+							<!-- for parents -->
+							<div class = "section-icons_wrapper-element"></div>
+							<!-- about group -->
+							<div class = "section-icons_wrapper-element"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			<!-- section4 - footer -->
+		</div>
 	
 	</body>
 </html>
