slide 2 - recrutation modification

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<script src = "script/animationController.js"></script>
 		<script src = "script/title-stripe-animation.js"></script>
 		<script src = "script/icons-animation.js"></script>
+		<script src = "script/text-animation.js"></script>
 		
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i|Open+Sans+Condensed:300,300i,700|Ubuntu:300,300i,400,400i,500,500i,700,700i&amp;subset=latin-ext" rel="stylesheet">
 	
@@ -72,15 +73,19 @@
 				<div class = "section_background" id = "section2-background">
 					<div class = "section_stripe" id = "section_stripe2">
 						<div class = "section_sectionTitle" id = "section_sectionTitle2">Rekrutacja</div>
-						<div class = "section_icons_wrapper">
-							<!-- statut -->
-							<div class = "section-icons_wrapper-element"></div>
-							<!-- history -->
-							<div class = "setion-icons_wrapper-element"></div>
-							<!-- for parents -->
-							<div class = "section-icons_wrapper-element"></div>
-							<!-- about group -->
-							<div class = "section-icons_wrapper-element"></div>
+						<div class = "section-text_wrapper">
+							<div class = "text_left_column">Szukasz przygody i ciekawej formy spędzenia aktywnie wolnego czasu? </br>A może interesujesz się wojskiem i militariami?</br> Chcesz się sprawdzić? Jeśli wartości takie jak Honor i Ojczyzna nie są Ci obce to dobrze trafiłeś!
+							</div>
+							<div class = "text_right_column">
+								Jednostka Strzelecka 4057 Konin oferuje wiele możliwości rozwoju, m.in.:</br>
+								Szkolenia z zielonej taktyki</br>
+								Szkolenia z ratownictwa medycznego</br>
+								Zajecia survivalowe</br>
+								Strzelania z broni palnej na strzelnicy</br>
+								Wystąpienia na uroczystościach państwowych</br>
+								Poprawę kondycji fizycznej</br>
+							</div>
+							<div class = "recru_more">Więcej</div>
 						</div>
 					</div>
 				</div>
